--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.1",
+    "file-loader": "^3.0.1",
     "webpack": "^3.1.0"
   },
   "scripts": {
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
     "dev": "cross-env BABEL_ENV=default webpack --watch"
+  },
+  "dependencies": {
+    "@wordpress/plugins": "^2.2.0"
   }
 }
