--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
 	"presets": [
-		[ "env", {
+		[ "@babel/preset-env", {
 			"modules": false,
 			"targets": {
 				"browsers": [
@@ -18,6 +18,8 @@
 	"plugins": [
 		[ "transform-react-jsx", {
 			"pragma": "wp.element.createElement"
-		} ]
+		} ],
+		["@babel/plugin-proposal-object-rest-spread"],
+		["@babel/plugin-proposal-class-properties"]
 	]
 }
