--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "license": "GPL-2.0-or-later",
   "main": "block.js",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.0.1",
     "file-loader": "^3.0.1",
-    "webpack": "^3.1.0"
+    "webpack": "^3.12.0"
   },
   "scripts": {
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
     "dev": "cross-env BABEL_ENV=default webpack --watch"
   },
   "dependencies": {
-    "@wordpress/plugins": "^2.2.0"
+    "@wordpress/plugins": "^2.2.0",
+    "react-dinosaur-game": "^1.0.0"
   }
 }
