--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.0.1",
     "file-loader": "^3.0.1",
-    "webpack": "^3.12.0",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "webpack": "^3.12.0"
   },
   "scripts": {
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
